# server.js
@@ -1,31 +1,96 @@
-const express = require("express")
-const bodyParser = require("body-parser")
-const mongodb = require("./data/database")
-const app = express()
-const port = process.env.PORT || 3080
+const express = require("express");
+const bodyParser = require("body-parser");
+const mongodb = require("./data/database");
+const passport = require("passport");
+const session = require("express-session");
+const GitHubStrategy = require("passport-github2").Strategy;
+const cors = require("cors");
 
-app.use(bodyParser.json());
-app.use((req, res, next) => {
-    res.setHeader("Access-Control-Allow-Origin", "*")
-    res.setHeader(
-        "Access-Control-Allow-Headers",
-        "Origin, X-Requested-With, Content-Type, Accept, Z-Key"
+const port = process.env.PORT || 3080;
+const app = express();
+
+app.use(bodyParser.json())
+    .use(
+        session({
+            secret: "secret",
+            resave: false,
+            saveUninitialized: true,
+        }),
     )
-    res.setHeader("Access-Control-Allow-Methods", "GET, POST, PUT, DELETE, OPTIONS")
-    next()
-})
-app.use("/", require("./routes"))
-    
-process.on('uncaughtException', (err, origin) => {
-  console.log(process.stderr.fd, `Caught exception: ${err}\n` + `Exception origin: ${origin}`);
+    .use(passport.initialize())
+    .use(passport.session())
+    .use((req, res, next) => {
+        res.setHeader("Access-Control-Allow-Origin", "*");
+        res.setHeader(
+            "Access-Control-Allow-Headers",
+            "Origin, X-Requested-With, Content-Type, Accept, Z-Key, Authorization",
+        );
+        res.setHeader(
+            "Access-Control-Allow-Methods",
+            "GET, POST, PUT, DELETE, OPTIONS, PATCH",
+        );
+        next();
+    })
+    .use(
+        cors({ methods: ["GET", "POST", "PUT", "DELETE", "OPTIONS", "PATCH"] }),
+    )
+    .use(cors({ origin: "http://localhost:3080", credentials: true }))
+    .use("/", require("./routes"));
+
+passport.use(
+    new GitHubStrategy(
+        {
+            clientID: process.env.GITHUB_CLIENT_ID,
+            clientSecret: process.env.GITHUB_CLIENT_SECRET,
+            callbackURL: process.env.CALLBACK_URL,
+        },
+        function (accessToken, refreshToken, profile, done) {
+            return done(null, profile);
+        },
+    ),
+);
+
+passport.serializeUser((user, done) => {
+    done(null, user);
+});
+passport.deserializeUser((user, done) => {
+    done(null, user);
 });
 
+app.get("/", (req, res) => {
+    console.log("[#] SESSION: ",req.session)
+    res.send(
+        req.session.user !== undefined
+            ? `Logged in as ${req.session.user.displayName}`
+            : "Logged out",
+    );
+});
+
+app.get(
+    "/github/callback",
+    passport.authenticate("github", {
+        failureRedirect: "/api-docs",
+        session: false,
+    }),
+    (req, res) => {
+        req.session.user = req.user;
+        res.redirect("/");
+    },
+);
+
+process.on("uncaughtException", (err, origin) => {
+    console.log(
+        process.stderr.fd,
+        `Caught exception: ${err}\n` + `Exception origin: ${origin}`,
+    );
+});
 
 mongodb.initDb((err) => {
-    if (err){
-        console.log(err)
+    if (err) {
+        console.log(err);
+    } else {
+        app.listen(port, () => {
+            console.log(`Database listening and Node running on port ${port}`);
+        });
     }
-    else{
-        app.listen(port, ()=> {console.log(`Database listening and Node running on port ${port}`)})
-    }
-})
+});
